button alignment fixed

--- a/MSPcode/css/style.css
+++ b/MSPcode/css/style.css
@@ -1181,6 +1181,12 @@
     width: 50%;
 }
 
+.training-form form p{
+  color: palegrey;
+  margin-bottom: 0;
+}
+
+
 .training-form label {
     display: inline-block;
     width: 150px;
@@ -1236,6 +1242,12 @@ input[type="text"], select, textarea {
 {
   margin-right: 225px;
 }
+
+.addtrainingtxt
+{
+  color: darkred;
+}
+
 
 /*Edit Training*/
 #edit_trainingbg{
@@ -1448,7 +1460,7 @@ display: inline-block;
   padding-top: 50px;
   padding-bottom: 50px;
   padding-left: 20px;
-  padding-right: 55px;
+  padding-right: 75px;
   background-color: #f9f8f9;
   margin-bottom: 150px;
   
@@ -1459,8 +1471,8 @@ display: inline-block;
   margin-bottom: 20px;
   color: rgb(22, 12, 74);
   font-weight: bold;
-  
-  
+  margin-left: 0px;
+  margin-right: 15px;
   
   
 }
@@ -1471,6 +1483,7 @@ display: inline-block;
   padding: 5px;
   width: 70%;
   margin-left: 160px;
+  margin-right: 100px;
   
   
 }
@@ -1481,7 +1494,7 @@ display: inline-block;
   cursor: pointer;
   margin: 10px;
   width: 100px;
-  margin-left: 290px;
+  margin-left: 150px;
   font-size: 20px;
 }
 .dltbody form input[type="submit"][value="Yes"] {
